Fixed image path and folder name issues

--- a/products.html
+++ b/products.html
@@ -57,56 +57,56 @@
       <h2> CAT FOOD </h2>
       <div class="products">
         <div class="product-card">
-          <img src="Products/Royal Canin Digestive Care.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Digestive Care.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Digestive Care 4kg Dry Cat Food </p>
           <p class="price">RM 144.48</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Hair & Skin.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Hair & Skin.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Hair & Skin 10kg Dry Cat Food</p>
           <p class="price">Rm 344.88</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Urinary Care.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Urinary Care.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Urinary Care 4kg Dry Cat Food</p>
           <p class="price">RM 144.48</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Wet Hair & Skin Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Wet Hair & Skin Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Wet Hair & Skin Pouch 85g Wet Cat Food</p>
           <p class="price">RM 3.96</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Wet Sterilised Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Wet Sterilised Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Wet Sterilised Pouch 85g Wet Cat Food</p>
           <p class="price">RM 3.96</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Wet Instinctive Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Royal Canin Wet Instinctive Pouch.png" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Wet Instinctive Pouch 85g Wet Cat Food</p>
           <p class="price">RM 3.96</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Mackerel Dry Cat Food.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Whiskas Mackerel Dry Cat Food.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Mackerel Dry Cat Food 1.2KG</p>
           <p class="price">RM 17.20</p>
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Kitten Ocean Fish Dry Cat Food.jpg" alt="Cat Food"
+          <img src="products/Whiskas Kitten Ocean Fish Dry Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Kitten Ocean Fish Dry Cat Food 1.1KG.</p>
@@ -115,7 +115,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Senior Mackerel Cat Food.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Whiskas Senior Mackerel Cat Food.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Senior Mackerel Cat Food 1.1kg</p>
           <p class="price">RM 17.20</p>
@@ -123,7 +123,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Dry Cat food Tuna Flavor.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Whiskas Dry Cat food Tuna Flavor.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Dry Cat food Tuna Flavor 1.2KG</p>
           <p class="price">RM 17.20</p>
@@ -131,7 +131,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Adult Years 1+ Skin & Coat (Chicken & Salmon Flavour).jpg" alt="Cat Food"
+          <img src="products/Whiskas Adult Years 1+ Skin & Coat (Chicken & Salmon Flavour).jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Adult Years 1+ Skin & Coat 1.1kg</p>
@@ -140,7 +140,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/WHISKAS GRILLED SABA DRY.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/WHISKAS GRILLED SABA DRY.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>WHISKAS GRILLED SABA DRY C/ FOOD 1.2KG</p>
           <p class="price">RM 17.20</p>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Pouch Real Fish Tuna.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Whiskas Pouch Real Fish Tuna.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Pouch Real Fish Tuna 80g</p>
           <p class="price">RM 2.50</p>
@@ -156,7 +156,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Pouch 1+ Years (Grilled Saba Flavour).jpg" alt="Cat Food"
+          <img src="products/Whiskas Pouch 1+ Years (Grilled Saba Flavour).jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Pouch 1+ Years (Grilled Saba Flavour) 80g</p>
@@ -165,7 +165,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Whiskas Pouch Chicken and Tuna.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
+          <img src="products/Whiskas Pouch Chicken and Tuna.jpg" alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Whiskas</h3>
           <p>Whiskas Pouch Chicken and Tuna 85g</p>
           <p class="price">RM 2.50</p>
@@ -173,7 +173,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina One Healthy Kitten Chicken Dry Cat Food.jpg" alt="Cat Food"
+          <img src="products/Purina One Healthy Kitten Chicken Dry Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina One Healthy Kitten Chicken Dry Cat Food 1.2kg</p>
@@ -182,7 +182,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina One Healthy Adult Salmon and Tuna Dry Cat Food.jpg" alt="Cat Food"
+          <img src="products/Purina One Healthy Adult Salmon and Tuna Dry Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina One Healthy Adult Salmon and Tuna Dry Cat Food 1.2kg</p>
@@ -191,7 +191,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina One Indoor Advantage Chicken Dry Cat Food.jpg" alt="Cat Food"
+          <img src="products/Purina One Indoor Advantage Chicken Dry Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina One Indoor Advantage Chicken Dry Cat Food 1.2kg</p>
@@ -200,7 +200,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina Fancy Feast Royale Seafood Chicken Medley in Tuna Jus Wet Cat Food 85g.jpg"
+          <img src="products/Purina Fancy Feast Royale Seafood Chicken Medley in Tuna Jus Wet Cat Food 85g.jpg"
             alt="Cat Food" style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina Fancy Feast Royale Seafood Chicken Medley in Tuna Jus Wet Cat Food 85g</p>
@@ -209,7 +209,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina Fancy Feast Royale Roasted Succulent Chicken Wet Cat Food.jpg" alt="Cat Food"
+          <img src="products/Purina Fancy Feast Royale Roasted Succulent Chicken Wet Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina Fancy Feast Royale Roasted Succulent Chicken Wet Cat Food 85g</p>
@@ -218,7 +218,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Purina Fancy Feast Adult Royale Tuna Whitemeat Supreme Wet Cat Food.jpg" alt="Cat Food"
+          <img src="products/Purina Fancy Feast Adult Royale Tuna Whitemeat Supreme Wet Cat Food.jpg" alt="Cat Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>Purina Fancy Feast Adult Royale Tuna Whitemeat Supreme Wet Cat Food 85g</p>
@@ -232,7 +232,7 @@
       <h2> DOG FOOD </h2>
       <div class="products">
         <div class="product-card">
-          <img src="Products/Royal Canin Mini Adult 2kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Mini Adult 2kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Mini Adult 2kg Dry Dog Food </p>
@@ -241,7 +241,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Medium Adult 4kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Medium Adult 4kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Medium Adult 4kg Dry Dog Food g</p>
@@ -250,7 +250,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Maxi Adult 4kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Maxi Adult 4kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Maxi Adult 4kg Dry Dog Food</p>
@@ -259,7 +259,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Mini Puppy 2kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Mini Puppy 2kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Mini Puppy 2kg Dry Dog Food</p>
@@ -268,7 +268,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Medium Puppy 10kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Medium Puppy 10kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Medium Puppy 10kg Dry Dog Food</p>
@@ -277,7 +277,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/Royal Canin Maxi Puppy 4kg Dry Dog Food.png" alt="Dog Food"
+          <img src="products/Royal Canin Maxi Puppy 4kg Dry Dog Food.png" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Royal Canin</h3>
           <p>Royal Canin Maxi Puppy 4kg Dry Dog Food</p>
@@ -286,7 +286,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PRO PLAN OPTIDERMA ADULT SENSITIVE SKIN.jpg" alt="Dog Food"
+          <img src="products/PURINA PRO PLAN OPTIDERMA ADULT SENSITIVE SKIN.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PRO PLAN OPTIDERMA ADULT SENSITIVE SKIN 2.5kg</p>
@@ -295,7 +295,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PRO PLAN OPTIDIGEST ADULT SENSITIVE DIGESTION 12kg.jpg" alt="Dog Food"
+          <img src="products/PURINA PRO PLAN OPTIDIGEST ADULT SENSITIVE DIGESTION 12kg.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PRO PLAN OPTIDIGEST ADULT SENSITIVE DIGESTION </p>
@@ -304,7 +304,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PROPLAN OPTI POWER ADULT PERFORMANCE.jpg" alt="Dog Food"
+          <img src="products/PURINA PROPLAN OPTI POWER ADULT PERFORMANCE.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PROPLAN OPTI POWER ADULT PERFORMANCE 12kg</p>
@@ -313,7 +313,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PRO PLAN OPTIDERMA PUPPY SENSITIVE SKIN.jpg" alt="Dog Food"
+          <img src="products/PURINA PRO PLAN OPTIDERMA PUPPY SENSITIVE SKIN.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PRO PLAN OPTIDERMA PUPPY SENSITIVE SKIN 2.5kg</p>
@@ -322,7 +322,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PRO PLAN OPTIDIGEST PUPPY SENSITIVE DIGESTION 2.5kg.jpg" alt="Dog Food"
+          <img src="products/PURINA PRO PLAN OPTIDIGEST PUPPY SENSITIVE DIGESTION 2.5kg.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PRO PLAN OPTIDIGEST PUPPY SENSITIVE DIGESTION 2.5kg</p>
@@ -331,7 +331,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PURINA PRO PLAN OPTISTART PUPPY SMALL BREED.jpg" alt="Dog Food"
+          <img src="products/PURINA PRO PLAN OPTISTART PUPPY SMALL BREED.jpg" alt="Dog Food"
             style="width: 50%; height: 50%;">
           <h3>Purina</h3>
           <p>PRO PLAN OPTISTART PUPPY SMALL BREED 2.5kg</p>
@@ -346,7 +346,7 @@
       <h2> Pets Vitamin & Supplements </h2>
       <div class="products">
         <div class="product-card">
-          <img src="Products/Cosy Pet Multi Vitamin 10ml.jpg" alt="Vitamin" style="width: 50%; height: 50%;">
+          <img src="products/Cosy Pet Multi Vitamin 10ml.jpg" alt="Vitamin" style="width: 50%; height: 50%;">
           <h3>COSY PET</h3>
           <p>COSY PET MULTI-VITAMIN 10ml</p>
           <p class="price">RM 9.90</p>
@@ -354,7 +354,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/COSY PET MULTI-VITAMIN 20ml.jpg" alt="Vitamin" style="width: 50%; height: 50%;">
+          <img src="products/COSY PET MULTI-VITAMIN 20ml.jpg" alt="Vitamin" style="width: 50%; height: 50%;">
           <h3>COSY PET</h3>
           <p>Cosy Pet Multi Vitamin 20ml</p>
           <p class="price">RM 16.90</p>
@@ -400,7 +400,7 @@
       <h2> Pets Litter Box & Sands </h2>
       <div class="products">
         <div class="product-card">
-          <img src="Products/CAT TRAY WITH SCOOP.jpg" alt="Box Litter" alt="Pet Litter"
+          <img src="products/CAT TRAY WITH SCOOP.jpg" alt="Box Litter" alt="Pet Litter"
             style="width: 50%; height: 50%;">
           <h3>ACE PET</h3>
           <p>CAT TRAY WITH SCOOP</p>
@@ -409,7 +409,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/PET PAN WITH SCOOP.jpg" alt="Box Litter" alt="Pet Litter" style="width: 50%; height: 50%;">
+          <img src="products/PET PAN WITH SCOOP.jpg" alt="Box Litter" alt="Pet Litter" style="width: 50%; height: 50%;">
           <h3>ACE PET</h3>
           <p>PET PAN WITH SCOOP</p>
           <p class="price">Rm 51.80</p>
@@ -417,7 +417,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/CAT LITTER SCOOP EXTRA STRONG.jpg" alt="Box Litter" alt="Pet Litter"
+          <img src="products/CAT LITTER SCOOP EXTRA STRONG.jpg" alt="Box Litter" alt="Pet Litter"
             style="width: 50%; height: 50%;">
           <h3>SAVIC</h3>
           <p>CAT LITTER SCOOP EXTRA STRONG</p>
@@ -426,7 +426,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/SUPER PREMIUM CAT LITTER - TOFU 10 LITRE.jpg" alt="Box Litter" alt="Pet Litter"
+          <img src="products/SUPER PREMIUM CAT LITTER - TOFU 10 LITRE.jpg" alt="Box Litter" alt="Pet Litter"
             style="width: 50%; height: 50%;">
           <h3>TRUSTIE</h3>
           <p>SUPER PREMIUM CAT LITTER - TOFU 10 LITRE</p>
@@ -435,7 +435,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/CATSAN ULTRA 5 LITRE.jpg" alt="Box Litter" alt="Pet Litter"
+          <img src="products/CATSAN ULTRA 5 LITRE.jpg" alt="Box Litter" alt="Pet Litter"
             style="width: 50%; height: 50%;">
           <h3>CATSAN</h3>
           <p>CATSAN ULTRA 5 LITRE</p>
@@ -444,7 +444,7 @@
         </div>
 
         <div class="product-card">
-          <img src="Products/TOFU CAT LITTER - CHARCOAL 7L.jpg" alt="Box Litter" alt="Pet Litter"
+          <img src="products/TOFU CAT LITTER - CHARCOAL 7L.jpg" alt="Box Litter" alt="Pet Litter"
             style="width: 50%; height: 50%;">
           <h3>MY</h3>
           <p>TOFU CAT LITTER - CHARCOAL 7L</p>
